--- a/index.html
+++ b/index.html
@@ -2,6 +2,34 @@
 layout: default
 ---
 <div id="page-top" class="container-fluid">
+
+<div class="row">
+	<div class="col px-0">
+
+<div id="portfolio_carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img src="" class="d-block w-100" alt="Circular image loader 0">
+		</div>
+		<div class="carousel-item">
+			<img src="" class="d-block w-100" alt="Circular image loader 1">
+		</div>
+		<div class="carousel-item">
+			<img src="" class="d-block w-100" alt="Circular image loader 2">
+		</div>
+	</div>
+	<button class="carousel-control-prev" type="button" data-bs-target="#portfolio_carousel" data-bs-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+	</button>
+	<button class="carousel-control-next" type="button" data-bs-target="#portfolio_carousel" data-bs-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Next</span>
+	</button>
+</div>
+
+	</div>
+</div>
 	<!--<div id="page-top" class="row align-items-center text-center my-5 py-5">
 		<div class="col">
 			<h1 class="fst-italic">Welcome To Our Studio!</h1>
