Made the carousel a marquee.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@ layout: default
 <div class="row">
 	<div class="col px-0">
 
-<div id="portfolio_carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+		<marquee id="carousel" class="">
+
+		</marquee>
+<!--<div id="portfolio_carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
 	<div class="carousel-inner">
 		<div class="carousel-item active">
 			<img src="" class="d-block w-100" alt="Circular image loader 0">
@@ -26,7 +29,7 @@ layout: default
 		<span class="carousel-control-next-icon" aria-hidden="true"></span>
 		<span class="visually-hidden">Next</span>
 	</button>
-</div>
+			</div>-->
 
 	</div>
 </div>
