Huge reorganization, pages are kinda done.

--- a/_sections/services.html
+++ b/_sections/services.html
@@ -1,20 +1,20 @@
 ---
 title: Services
 subtitle: Explore my services
-order: 100
+order: 300
 anchor: services
 ---
 
-<div class="container">
+<div class="container my-5 py-5">
 	<div class="row">
 		<div class="col d-flex justify-content-center">
-			<h3 class="service-circle rounded-circle d-flex align-items-center justify-content-center mb-0 text-primary" style="background-image:url('gallery/HLL_0309.jpg');background-position:center;">Weddings</h3>
+			<a href="/weddings.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/vertical/HLL_0309.jpg');background-position:center;">Weddings</a>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<h3 class="service-circle rounded-circle d-flex align-items-center justify-content-center mb-0 text-primary" style="background-image:url('gallery/HLL_0309.jpg');background-position:center;">Events</h3>
+			<a href="/events.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/vertical/HLL_0309.jpg');background-position:center;">Events</a>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<h3 class="service-circle rounded-circle d-flex align-items-center justify-content-center mb-0 text-primary" style="background-image:url('gallery/HLL_0309.jpg');background-position:center;">Portraits</h3>
+			<a href="/portraits.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/vertical/HLL_0309.jpg');background-position:center;">Portraits</a>
 		</div>
 	</div>
 
