Footer is fixed along with other bugs.

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -2,6 +2,7 @@
 layout: page-gallery
 permalink: /events.html
 lead: Stuff at events I can make photos of as well
+anchor: events
 ---
 <div class="container-fluid">
     <p>Events page.</p>
