--- a/_pages/portraits.html
+++ b/_pages/portraits.html
@@ -2,6 +2,7 @@
 layout: page-gallery
 permalink: /portraits.html
 lead: I can do portraits too and stuff.
+anchor: portraits
 ---
 <div class="container-fluid">
     <p>Portraits page.</p>
