--- a/_sections/services.html
+++ b/_sections/services.html
@@ -8,13 +8,13 @@ anchor: services
 <div class="container my-5 py-5">
 	<div class="row">
 		<div class="col d-flex justify-content-center">
-			<a href="/weddings.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/vertical/HLL_0309.jpg');background-position:center;">Weddings</a>
+			<a href="/weddings.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0013-V-weddings.jpg');background-position:center;">Weddings</a>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<a href="/events.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/vertical/HLL_0309.jpg');background-position:center;">Events</a>
+			<a href="/events.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0013-V-weddings.jpg');background-position:center;">Events</a>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<a href="/portraits.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/vertical/HLL_0309.jpg');background-position:center;">Portraits</a>
+			<a href="/portraits.html" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0013-V-weddings.jpg');background-position:center;">Portraits</a>
 		</div>
 	</div>
 
