Made the menu system a bit more automated.

--- a/_sections/services.html
+++ b/_sections/services.html
@@ -3,6 +3,7 @@ title: Services
 subtitle: Explore my services
 order: 300
 anchor: services
+menutitle: Services
 ---
 
 <div class="container my-5 py-5">
