Making things less boring.

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -5,5 +5,5 @@ lead: Stuff at events I can make photos of as well
 anchor: events
 ---
 <div class="container-fluid">
-    <p>Events page.</p>
+    <p>You can haz events and I can photo.</p>
 </div>
