Added a background to services section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@ layout: default
 
 <div id="sections" class="container-fluid">
 {% for section in site.sections %}
-<div id="{{ section.anchor }}"{% if section.background %} class="row parallax" data-src="background.jpg"{% endif %}><div class="col">{{ section.output }}</div></div>
+	<div id="{{ section.anchor }}" class="row position-relative">
+		{% if section.background %}
+		<div class="parallax" data-src="{{ section.background }}"></div>
+		{% endif %}
+		<div class="col">{{ section.output }}</div>
+	</div>
 {% endfor %}
 </div>
 
