Reorganizing to make styling easier.

--- a/_sections/services.html
+++ b/_sections/services.html
@@ -4,7 +4,7 @@ subtitle: Explore my services
 order: 300
 anchor: services
 menutitle: Services
-
+background: gallery/0001-V-weddings.jpg
 ---
 
 <div class="container my-5 py-5">
