Renamed a front matter variable.

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -1,7 +1,7 @@
 ---
 layout: page-gallery
 permalink: /events.html
-lead: Stuff at events I can make photos of as well
+heading: Stuff at events I can make photos of as well
 anchor: events
 ---
 <div class="container-fluid">
