--- a/_pages/weddings.html
+++ b/_pages/weddings.html
@@ -1,7 +1,7 @@
 ---
 layout: page-gallery
 permalink: /weddings.html
-lead: I can do photography at weddings for you.
+heading: I can do photography at weddings for you.
 anchor: weddings
 ---
 <div>Blurb about stuff and things.</div>
