--- a/_pages/portraits.html
+++ b/_pages/portraits.html
@@ -1,7 +1,7 @@
 ---
 layout: page-gallery
 permalink: /portraits.html
-lead: I can do portraits too and stuff.
+heading: I can do portraits too and stuff.
 anchor: portraits
 ---
 <div class="container-fluid">
