--- a/_sections/services.html
+++ b/_sections/services.html
@@ -10,13 +10,13 @@ background: gallery/0001-V-weddings.jpg
 <div class="container my-5 py-5">
 	<div class="row">
 		<div class="col d-flex justify-content-center">
-			<a href="{% link _pages/weddings.html %}" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0003-V-weddings.jpg');background-position:center;">Weddings</a>
+			<a href="{% link _pages/weddings.html %}" class="service-card rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0003-V-weddings.jpg');background-position:center;">Weddings</a>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<a href="{% link _pages/events.html %}" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0001-V-weddings.jpg');background-position:center;">Events</a>
+			<a href="{% link _pages/events.html %}" class="service-card rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0001-V-weddings.jpg');background-position:center;">Events</a>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<a href="{% link _pages/portraits.html %}" class="service-circle rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0002-V-weddings.jpg');background-position:center;">Portraits</a>
+			<a href="{% link _pages/portraits.html %}" class="service-card rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0002-V-weddings.jpg');background-position:center;">Portraits</a>
 		</div>
 	</div>
 
