Adding some space to play with.

--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -8,3 +8,5 @@ menutitle: Contact
 background: gallery/0001-H-weddings.jpg
 ---
 <p>Contact me page.</p>
+<div style="height: 300px;">&nbsp;</div>
+<p>Fin</p>
