Removed something unnecessary.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 		{% if section.background %}
 		<div class="parallax" data-src="{{ section.background }}"></div>
 		{% endif %}
-		<div class="col">{{ section.output }}</div>
+		<div class="col">{{ section }}</div>
 	</div>
 {% endfor %}
 </div>
