--- a/_sections/services.html
+++ b/_sections/services.html
@@ -1,7 +1,7 @@
 ---
 title: Services
 subtitle: Explore my services
-order: 300
+order: 100
 anchor: services
 menutitle: Services
 ---
@@ -9,7 +9,7 @@ menutitle: Services
 <div class="container my-5 py-5">
 	<div class="row">
 		{% for service in site.services %}
-		<div class="col">{{ service }}</div>
+		<div class="col"><a class="text-reset" href="{% link {{ service.link }} %}">{{ service }}</a></div>
 		{% endfor %}
 		<!-- <div class="col d-flex justify-content-center">
 			<a href="{% link _pages/weddings.html %}" class="service-card rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0003-V-weddings.jpg');background-position:center;">Weddings</a>
