--- a/_sections/services.html
+++ b/_sections/services.html
@@ -7,13 +7,8 @@ menutitle: Services
 ---
 
 <div class="container my-5 py-5">
-	<div class="row">
-		{% for service in site.services %}
-		<div class="col"><a class="text-reset" href="{% link {{ service.link }} %}">{{ service }}</a></div>
-		{% endfor %}
-		<!-- <div class="col d-flex justify-content-center">
-			<a href="{% link _pages/weddings.html %}" class="service-card rounded-circle d-flex align-items-center justify-content-center m-5" style="background-image:url('gallery/0003-V-weddings.jpg');background-position:center;">Weddings</a>
-		</div> -->
-	</div>
+	<div class="row">{% for service in site.services %}
+		<div class="col">{{ service }}</div>
+	{% endfor %}</div>
 
 </div>
