Doing decorative things.

--- a/_sections/services.html
+++ b/_sections/services.html
@@ -6,7 +6,7 @@ anchor: services
 menutitle: Services
 ---
 
-<div class="container my-5 py-5">
+<div class="container my-5">
 	<div class="row">{% for service in site.services %}
 		<div class="col">{{ service }}</div>
 	{% endfor %}</div>
