--- a/_sections/divider.html
+++ b/_sections/divider.html
@@ -1,5 +1,6 @@
 ---
 order: 50
-published: true
+published: false
+anchor: divider
 ---
 <div class="section-divider my-5 px-5">{% include divider-flower.svg %}</div>
